# wbt_rl

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  install.sh  pyproject.toml
cfg/: README.md
cfg/00_datasets/: data.yaml  lafan.yaml  omomo.yaml  omomo_new.yaml  sfu.yaml
cfg/01_retargeting/: gmr.yaml  holosoma.yaml  holosoma_custom.yaml  test_pipe.yaml
cfg/02_training/: holosoma.yaml  holosoma_custom.yaml  test_pipe.yaml
cfg/03_inference/: holosoma.yaml  holosoma_custom.yaml  test_pipe.yaml
cfg/04_deployment/: unitree.yaml
cfg/motion_convertor/: holosoma_prep.yaml  interact.yaml
data/00_raw_datasets/: README.md
data/01_retargeted_motions/: README.md
installers/: MODULES  lib.sh
installers/modules/: gmr.sh  holonew_retargeting.sh  holosoma_inference.sh  holosoma_retargeting.sh  holosoma_training.sh  test_pipe_retargeting.sh  unitree_control_interface.sh
installers/pipe/: interact.sh  wbt.sh
modules/01_retargeting/: holosoma  holosoma_custom  test_pipe
modules/02_training/: holosoma  holosoma_custom  test_pipe
modules/03_inference/: holosoma  holosoma_custom  test_pipe
scripts/: README.md  activate_wbt.sh  deploy.py  infer.py  retarget.py  train.py
src/motion_convertor/: README.md  __init__.py  _config.py  _obj_to_urdf.py  _subprocess.py  connectors.py  formats.py  unified.py
src/motion_convertor/_to_retargeter_input/: lafan_gmr.py  (+5 more)
src/ros2_bridge/: holosoma_inference_custom.py
tests/: test_connectors.py  test_deploy.py  test_formats.py  test_infer.py  test_subprocess.py
tests/docker_arch_debug/: Dockerfile  README.md
(+15 files in other folders)
