[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wbt_rl"
version = "0.1.0"
description = "Modular benchmarking and integration framework for humanoid robot Whole-Body Tracking"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pyyaml",
    "joblib",
]

[tool.setuptools.packages.find]
where = ["src"]
